creating start button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main id="tab"></main>
+    <button id="start">START</button>
     <script src="./assets/javascript/script.js"></script>
   </body>
 </html>
