add stylization around the board

--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <img src="./assets/img/logo.png" alt="Lig 4">
+      <img src="./assets/img/Black_and_White_logo.png" alt="Black&White">
+    </header>
+    <div class="players">
+      <div id="player1">
+        <img src="./assets/img/player1.png" alt="Player 1">
+        <figure>
+          <img src="./assets/img/Nate.png" alt="Nate">
+        </figure>
+      </div>
+      <div id="player2">
+        <img src="./assets/img/player2.png" alt="player 2">
+        <figure>
+          <img src="./assets/img/Rosa.png" alt="Rosa">
+        </figure>
+      </div>
+    </div>
     <main id="tab"></main>
-    <button id="start">START</button>
+    <div id="start"><img src="./assets/img/start.png" alt="Start button"></div>
     <script src="./assets/javascript/script.js"></script>
   </body>
 </html>
