--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main id="tab"></main>
     <button id="start">START</button>
-    <button id="reset">RESET</button>
+    <!-- <button id="reset">RESET</button> -->
     <script src="./assets/javascript/script.js"></script>
   </body>
 </html>
