add scoreboard in html

--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
         <figure>
           <img src="./assets/img/Nate.png" alt="Nate">
         </figure>
+        <img src="./assets/img/score.png" alt="scoreboard">
+        <div id="scoreP1"></div>
       </div>
       <div id="player2">
         <img src="./assets/img/player2.png" alt="player 2">
         <figure>
           <img src="./assets/img/Rosa.png" alt="Rosa">
         </figure>
+        <img src="./assets/img/score.png" alt="scoreboard">
+        <div id="scoreP2"></div>
       </div>
     </div>
     <main id="tab"></main>
-    <button id="start">START</button>
+    <div id="start"><img src="./assets/img/start.png" alt="START"></div>
     <!-- <button id="reset">RESET</button> -->
     <script src="./assets/javascript/script.js"></script>
   </body>
