fixing background board and height and  width

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
   </head>
   <body>
     <header>
-      <img src="./assets/img/logo.png" alt="Lig 4">
-      <img src="./assets/img/Black_and_White_logo.png" alt="Black&White">
+      <img src="./assets/img/logo.png" alt="Lig 4" />
+      <img src="./assets/img/Black_and_White_logo.png" alt="Black&White" />
     </header>
     <div class="players">
       <div id="player1">
-        <img src="./assets/img/player1.png" alt="Player 1">
+        <img src="./assets/img/player1.png" alt="Player 1" />
         <figure>
-          <img src="./assets/img/Nate.png" alt="Nate">
+          <img src="./assets/img/Nate.png" alt="Nate" />
         </figure>
       </div>
       <div id="player2">
-        <img src="./assets/img/player2.png" alt="player 2">
+        <img src="./assets/img/player2.png" alt="player 2" />
         <figure>
-          <img src="./assets/img/Rosa.png" alt="Rosa">
+          <img src="./assets/img/Rosa.png" alt="Rosa" />
         </figure>
       </div>
     </div>
-    <main id="tab"></main>
+    <main id="tab" class="table hidden"></main>
     <button id="start">START</button>
     <!-- <button id="reset">RESET</button> -->
     <script src="./assets/javascript/script.js"></script>
