Creating function endPopUp() to show the winner

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <img src="./assets/img/logo.png" alt="Lig 4">
       <img src="./assets/img/Black_and_White_logo.png" alt="Black&White">
     </header>
+    <div id="endPopUp" class="hidden">
+      <button id="btnAccept">Accept!</button>
+    </div>
     <div class="players">
       <div id="player1">
         <img src="./assets/img/player1.png" alt="Player 1">
@@ -27,7 +30,7 @@
       </div>
     </div>
     <main id="tab"></main>
-    <button id="start">START</button>
+    <button id="btnStart">START</button>
     <!-- <button id="reset">RESET</button> -->
     <script src="./assets/javascript/script.js"></script>
   </body>
