Resolving conflict after stash pop

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <img src="./assets/img/Black_and_White_logo.png" alt="Black&White" class="blackwhite">
     </header>
     <div id="endPopUp" class="hidden">
+      <p id="message"></p>
       <button id="btnAccept">Accept!</button>
     </div>
     <div class="scoreMobile">
