Struturing files for the last phase

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <img src="./assets/img/logo.png" alt="Lig 4">
       <img src="./assets/img/Black_and_White_logo.png" alt="Black&White" class="blackwhite">
     </header>
+    <!-- MUSICA -->
+    <!-- MUSICA -->
     <div id="endPopUp" class="hidden">
       <p id="message"></p>
       <button id="btnAccept">Accept!</button>
