--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
   </head>
   <body>
+    <audio src="./assets/song/pokemon_black_and_white_music_title_screen.mp3"></audio>
+    <div id="playAudio">
+      <img src="./assets/img/alto-falante-de-audio-ligado.png" alt="Stop Music" id="stopAudio">
+      <img src="./assets/img/alto-falante-de-audio-desligado.png" alt="Play Music" id="startAudio">
+    </div>
     <header>
       <img src="./assets/img/logo.png" alt="Lig 4">
       <img src="./assets/img/Black_and_White_logo.png" alt="Black&White" class="blackwhite">
