Adding images for the endPopUp

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <!-- MUSICA -->
     <!-- MUSICA -->
     <div id="endPopUp" class="hidden">
-      <p id="message"></p>
-      <button id="btnAccept">Accept!</button>
+      <img src="" id="imgEnd">
+      <button id="btnAccept">
+        <img src="./assets/img/accept.png" alt="">
+      </button>
     </div>
     <div class="scoreMobile">
       <div>
