adjusted scoreboard in the desktop version

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       <div id="player1">
         <img src="./assets/img/player1.png" alt="Player 1">
           <img src="./assets/img/Nate.png" alt="Nate">
-        <div class="scoreboard hidden">
+        <div class="scoreboard">
           <img src="./assets/img/score.png" alt="scoreboard">
-          <div class="scoreP1"></div>
+          <span class="scorePlay1"></span>
         </div>
       </div>
       <div id="player2">
         <img src="./assets/img/player2.png" alt="player 2">
           <img src="./assets/img/Rosa.png" alt="Rosa">
-        <div class="scoreboard hidden">
+        <div class="scoreboard">
           <img src="./assets/img/score.png" alt="scoreboard">
-          <div class="scoreP2"></div>
+          <span class="scorePlay2"></span>
         </div>
       </div>
     </div>
