Change player image according to current player done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="players">
       <div id="player1">
         <img src="./assets/img/player1.png" alt="Player 1">
-          <img src="./assets/img/Nate.png" alt="Nate">
+          <img id="nate" src="./assets/img/Nate.png" alt="Nate">
         <div class="scoreboard hidden">
           <img src="./assets/img/score.png" alt="scoreboard">
           <div class="scoreP1"></div>
@@ -36,7 +36,7 @@
       </div>
       <div id="player2">
         <img src="./assets/img/player2.png" alt="player 2">
-          <img src="./assets/img/Rosa.png" alt="Rosa">
+          <img id="rosa" src="./assets/img/Rosa.png" alt="Rosa">
         <div class="scoreboard hidden">
           <img src="./assets/img/score.png" alt="scoreboard">
           <div class="scoreP2"></div>
