--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>Birimon!</title>
   </head>
   <body>
     <audio src="./assets/song/pokemon_black_and_white_music_title_screen.mp3"></audio>
