Reducing code in JS

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img id="nate" src="./assets/img/Nate.png" alt="Nate">
         <div class="scoreboard hidden">
           <img src="./assets/img/score.png" alt="scoreboard">
-          <span class="scorePlay1"></span>
+          <span class="scoreP1"></span>
         </div>
       </div>
       <div id="player2">
@@ -45,7 +45,7 @@
           <img id="rosa" src="./assets/img/Rosa.png" alt="Rosa">
         <div class="scoreboard hidden">
           <img src="./assets/img/score.png" alt="scoreboard">
-          <span class="scorePlay2"></span>
+          <span class="scoreP2"></span>
         </div>
       </div>
     </div>
